syntax = "proto3";

package proto;
option go_package = "internal/pb";

enum DataType {
  STRING = 0;
  LIST = 1;
  SET = 2;
  SORTED_SET = 3;
  BLOOM_FILTER = 4;
  HYPER_LOG_LOG = 5;
  BITSET = 6;
  MAP = 7;
  GEO_HASH = 8;
}